The releases album is wrap correctly. It break down to the next line if there's is to much line

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -105,6 +105,7 @@ body {
   display: flex;
   -webkit-flex-direction: row; /* works with row or column */
   flex-direction: row;
+  flex-wrap: wrap;
   -webkit-align-items: center;
   align-items: center;
   -webkit-justify-content: center;
@@ -136,6 +137,7 @@ body {
 }
 .album_artist_name {
   /*position: absolute;*/
+  color: gray;
   width: 220px;
 }
 @keyframes fade-in {
